<?xml version="1.0"?>
<package>
  <name>qsr_msgs</name>
  <version>0.0.1</version>
  <description>The qsr_msgs package</description>

  <maintainer email="l.kunze@cs.bham.ac.uk">Lars Kunze</maintainer>

  <license>BSD</license>

  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author> 

  <build_depend>message_generation</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>

</package>